# chur

./: Cargo.toml  README.md  buf.yaml
crates/chur/: Cargo.toml
crates/chur-build/: Cargo.toml
crates/chur-build/src/: cfg.rs  defined_constants.rs  dependency.rs  error.rs  execute.rs  include_tree.rs  lib.rs  manifest.rs
crates/chur-build/src/cfg/: builder.rs
crates/chur-macros/: Cargo.toml
crates/chur-macros/src/: include_tree.rs  lib.rs
crates/chur/src/: cfg.rs  dependency.rs  error.rs  execute.rs  include_tree.rs  lib.rs
crates/chur/src/cfg/: builder.rs  codegen_path.rs
example/: Cargo.toml  build.rs
example/proto/example/hello_world/v1/: foo_service.proto  hello_world_service.proto
example/src/: main.rs  pb.rs
