[workspace]
    members = [
        "crates/*",
        "example",
    ]
    resolver = "2"

    [workspace.package]
        authors = [
            "d3rpp <github@d3rpp.dev>",
        ]
        description = "A wrapper around tonic-build which adds dependencies"
        edition = "2021"
        license = "MIT"
        readme = "./README.md"
        repository = "https://github.com/d3rpp/chur"
        version = "0.4.0"
        publish = true

    [workspace.dependencies]
        lazy_static = "^1.5"
        thiserror   = "^1.0"

        prost       = "^0.13"
        prost-types = "^0.13"
        tonic       = "^0.12"
        tonic-build = "^0.12"

        ureq = "^2.10"

        ron = "^0.8"
        serde = { version = "^1.0", features = [
            "derive",
        ] }

        sha = "^1.0"

        archiver-rs = "^0.5"
