[package]
name = "chur-example"
version.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
chur = { path = "../crates/chur" }
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true

[build-dependencies]
chur-build = { path = "../crates/chur-build" }