[package]
name = "chur-build"
version.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
publish = true

[dependencies]
lazy_static.workspace = true
thiserror.workspace = true

tonic-build.workspace = true

ureq.workspace = true

serde.workspace = true
ron.workspace = true

sha.workspace = true

archiver-rs.workspace = true