[package]
    name = "chur-build"

    description.workspace = true
    edition.workspace     = true
    license.workspace     = true
    publish.workspace     = true
    readme.workspace      = true
    repository.workspace  = true
    version.workspace     = true

[dependencies]
    lazy_static.workspace = true
    thiserror.workspace   = true

    tonic-build.workspace = true

    ureq.workspace = true

    ron.workspace   = true
    serde.workspace = true

    sha.workspace = true

    archiver-rs.workspace = true
