[package]
    name = "chur"

    description.workspace = true
    edition.workspace     = true
    license.workspace     = true
    publish.workspace     = true
    readme.workspace      = true
    repository.workspace  = true
    version.workspace     = true

[features]
    default = [
        "macros"
    ]

    macros = ["dep:chur-macros"]

[dependencies]
    chur-macros.path = "../chur-macros"
    chur-macros.optional = true
    chur-macros.version = "0.2.1"