[package]
    name = "chur"

    description.workspace = true
    edition.workspace     = true
    license.workspace     = true
    publish.workspace     = true
    readme.workspace      = true
    repository.workspace  = true
    version.workspace     = true

[features]
    default = ["codegen"]
    codegen = [
        "dep:proc-macro2",
        "dep:syn",
        "dep:quote",
        "dep:prettyplease"
    ]

[dependencies]
    lazy_static.workspace = true
    thiserror.workspace   = true

    tonic-build.workspace = true

    ureq.workspace = true

    ron.workspace   = true
    serde.workspace = true

    sha.workspace = true

    archiver-rs.workspace = true

    proc-macro2 = { version = "^1.0", optional = true }
    syn = { version = "^2.0", optional = true }
    quote = { version = "^1.0", optional = true }
    prettyplease = { version = "^0.2", optional = true }